# agent-BidRadar

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DEMO.md  Dockerfile  Dockerfile.demo  GEMINI.md  README.md  cloudbuild-demo.yaml  cloudbuild.yaml  deploy-demo.sh  pyproject.toml  requirements-demo.txt  streamlit_app.py
.streamlit/: config.toml
agent/: company_profile.py  config.py  downloader.py  logging_utils.py  models.py  runner.py  schemas.py
agent/analyzer/: gemini_analyzer.py  matcher.py
agent/scraper/: __init__.py  bll.py  comprasnet.py  conlicitacao.py  pncp.py  universo.py
api/: auth.py  main.py
company_profile/: README.md  capacitacoes.md  modelo_empresa_exemplo.md  restricoes.md  servicos.md  sobre.md
data/: licitacoes.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: BidsTable.jsx  Layout.jsx  ProfileEditor.jsx  Sidebar.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Admin.jsx  Dashboard.jsx  Filters.jsx  Login.jsx  Logs.jsx  Opportunities.jsx  Profile.jsx  Upload.jsx
frontend/src/services/: api.js
scripts/: backfill_dates.py  run_bidradar.sh  test_gemini.py
