[project]
name = "bidradar"
version = "0.1.0"
description = "Agente autonomo para prospeccao e analise de licitacoes publicas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "langchain>=0.2.0",
  "langgraph>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "google-cloud-firestore>=2.27.0",
  "google-cloud-bigquery>=3.41.0",
  "google-cloud-pubsub>=2.38.0",
  "playwright>=1.59.0",
  "google-cloud-secret-manager>=2.28.0",
  "google-cloud-storage>=3.10.1",
  "google-adk>=1.33.0",
  "urllib3>=2.3.0",
  "langchain-core>=0.3.51",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.0.0",
  "psycopg2-binary>=2.9.0",
  "starlette>=1.0.1",
  "aiohttp>=3.14.0",
  "idna>=3.15",
  "pyjwt>=2.13.0",
]

[tool.uv]
package = false
